--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,14 +88,11 @@ jobs:
         with:
           image-ref: "${{ steps.build.outputs.latest_tag }}"
           format: "sarif"
-          exit-code: "1"
           output: "trivy-results.sarif"
-          vuln-type: "os,library"
-          ignore-unfixed: true
-          severity: "CRITICAL,HIGH"
 
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v3
+        if: always()
         with:
           sarif_file: trivy-results.sarif
 
